# mobie-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
conductor/: index.md  plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/model_selection_dropdown_20260425/: index.md
conductor/archive/retest_latest_scenario_20260403/: spec.md
conductor/archive/screenshot-feature_20260404/: index.md  plan.md  spec.md
conductor/archive/ui-polish_20260402/: metadata.json  plan.md  spec.md
conductor/archive/update_agents_md/: plan.md
conductor/code_styleguides/: rust.md
conductor/tracks/chat_session_saving_20260426/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/delete_session_history_20260425/: plan.md
conductor/tracks/device-management_20260330/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/fix-chat-input-lag_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/fix-openrouter-bad-request_20260313/: plan.md
src/: config.rs  lib.rs  main.rs  yaml_exporter.rs
src/agent/: action.rs  mod.rs  rig_agent.rs  tools.rs
src/db/: mod.rs
src/device/: mod.rs  xml_parser.rs
src/llm/: mod.rs  prompt.rs
src/ui/: mod.rs
tests/: agent_history.rs  chat_db_persistence.rs  config_tests.rs  device_bridge_tests.rs  loading_detection.rs  model_api_tests.rs  openrouter_headers.rs  rig_init.rs  test_steps_tracking.rs  ui_input_tests.rs  xml_parser_enhanced.rs
(+29 files in other folders)
