[package]
name = "mobie"
version = "0.2.0"
edition = "2021"
description = "Mobie Studio: AI-powered desktop application for automated mobile testing"

[dependencies]
# Async Runtime & Concurrency
tokio = { version = "1.36", features = ["full"] }

# UI Framework
gpui = "0.2.2"

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Platform directories (config, home)
dirs = "5"

# Database
rusqlite = { version = "0.33.0", features = ["bundled"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Client (for LLM BYOK API calls)
reqwest = { version = "0.13", features = ["json"] }

# Logging & Observability
tracing = "0.1"
tracing-subscriber = "0.3"
smallvec = "1.15.1"

# LLM Framework
rig-core = { version = "0.32.0", features = ["derive"] }
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.4"
